# fmpxx

./: .env.example  .gitignore  .python-version  CHANGELOG.md  CLAUDE.md  README.md  agents_PRD.md  agents_rules.md  hello.py  output.txt  pyproject.toml  rules.md  test_agent.py  test_revenue_segment.py  test_visualization.py
.github/workflows/: workflow.yml
fmpxx/: __init__.py  base.py  client.py  company_info.py  exceptions.py  financials.py  info.py  quote.py  stocks.py  util.py  utils.py
fmpxx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fmpxx/agent/: agent.py  example_agent.py  interactive_agent.py  tools.py
fmpxx/updatedb/: database.py  update.py  updater.py
tests/: AAPL.csv  dual_axis_charts.py  performance_analysis.py  sample.py  test3.py  test_financials.py  test_stock.py  tests.py  tests2.py
