[project]
name = "fmpxx"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "agno>=1.0.0",
    "pydantic>=2.0.0",
    "google-genai>=1.26.0",
]
