[project]
name = "fmpxx"
version = "0.3.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "retry>=0.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
